#rpi_hw_video_encoder = library('rpi_hw_video_encoder',
#  ['raspi_encoder.cc', 'raspi_encoder_impl.cc', 'mmal_wrapper.cc',
#    'mmal_video.c', 'mmal_util.c', 'mmal_video_reset.c',
#    ],
#  dependencies: [webrtc_google_peer_dep]
#  )
#rpi_hw_video_encoder_dep = declare_dependency(
#  link_with: [rpi_hw_video_encoder]
#  )

